# Qt_Exapmle_Work

./: CMakeLists.txt  main.cpp
